Closed Bug 203257 Opened 23 years ago Closed 22 years ago

Win32 shows wrong error if there are no printers installed in the system

Categories

(Core :: Printing: Output, defect)

x86
Windows NT
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: roland.mainz, Unassigned)

Details

(Keywords: fixed1.7.5)

Attachments

(1 file)

Win32 shows wrong error if there are no printers installed in the system. Basically a fall-out of bug 191346 where I corrected the issue that print error dialog code in layout/ was wallpapering NS_ERROR_GFX_PRINTER_NO_PRINTER_AVAILABLE over all error codes returns from gfx. Since bug 191346 we now display exactly the matching error message text for the return code from gfx. This works for Unix/Linux, but it seems that gf/src/windows/nsDeviceContextSpecWin.cpp is returning NS_ERROR_FAILURE if there is no printer installed. Proposed fix: Edit gf/src/windows/nsDeviceContextSpecWin.cpp and return NS_ERROR_GFX_PRINTER_NO_PRINTER_AVAILABLE when there are no printers (that should be a one-line fix :)
nsPrinterEnumeraterWin::EnumeratePrinters returned generic NS_ERROR_FAILURE if printer enumeration failed. I changed it to return the error code from enumeration. Plus I changed the error code from GlobalPrinters::EnumerateNativePrinters to return NS_ERROR_GFX_PRINTER_NO_PRINTER_AVAILABLE if it can't find printers in the profile.
Comment on attachment 150461 [details] [diff] [review] use appropriate return code pretty simple patch
Attachment #150461 - Flags: review?(ere)
Comment on attachment 150461 [details] [diff] [review] use appropriate return code r=ere
Attachment #150461 - Flags: review?(ere) → review+
Attachment #150461 - Flags: superreview?(tor)
Comment on attachment 150461 [details] [diff] [review] use appropriate return code Please use diff -u8pN next time. sr=tor.
Attachment #150461 - Flags: superreview?(tor) → superreview+
Checked in. Checking in nsDeviceContextSpecWin.cpp; /cvsroot/mozilla/gfx/src/windows/nsDeviceContextSpecWin.cpp,v <-- nsDeviceContextSpecWin.cpp new revision: 3.51; previous revision: 3.50 done
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Keywords: fixed1.7.x
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: