Bug 203257 - wrong error if no printers installed (win32). Patch by aaronr@us.ibm.com, r=ere, sr=tor